<resources>
    <string name="app_name">Moody</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_checkin">Checkin</string>
    <string name="user_name">Zachary</string>
    <string name="basic_info">Basic Information</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="title_check_in">Check In</string>
    <string name="edit_btn_desc">Edit</string>
    <string name="dummy_email">zsolomonk@gmail.com</string>
    <string name="dummy_name">Zachary</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_genders">
        <item>Male</item>
        <item>Female</item>
        <item>Nonbinary</item>
    </string-array>

    <string-array name="pref_genders_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_frequency_list_titles">
        <item>Twice Daily</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_frequency_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_customize_entries">
        <item>Medicine</item>
        <item>Sleep</item>
        <item>Exercise</item>
        <item>Alcohol</item>
        <item>Caffeine</item>
        <item>Stress</item>
        <item>Meditation</item>
        <item>Work</item>
        <item>Diet</item>
        <item>Social</item>
    </string-array>

    <string-array name="pref_customize_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="pref_customize_values_default">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_insights">Insights</string>
    <string name="pref_title_checkin_frequency">Checkin Frequency</string>
    <string name="pref_description_share">Share your status updates with friends you have connected with.</string>
    <string name="pref_title_share">Enable sharing with friends</string>
    <string name="title_activity_checkin">CheckinActivity</string>
</resources>
