<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.zacharykirshbaum.moody.moody.ProfileFragment">

    <ScrollView
        android:id="@+id/scrolView_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_top"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_account_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview_account_profile"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/profile_text_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="Zachary Kirshbaum" />

                    <TextView
                        android:id="@+id/profile_text_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/profile_text_name"
                        android:layout_margin="2dp"
                        android:text="M" />

                    <TextView
                        android:id="@+id/profile_text_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/profile_text_gender"
                        android:layout_margin="2dp"
                        android:text="24" />

                </RelativeLayout>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_edit"
                    android:id="@+id/edit_profile_picture_button"
                    android:layout_alignEnd="@+id/imageview_account_profile"
                    android:layout_alignRight="@+id/imageview_account_profile" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/settings_button"
                    android:src="@android:drawable/ic_menu_preferences"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profile_top"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_text_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/name_hint"
                            android:text="@string/dummy_name"
                            android:enabled="false"
                            android:imeOptions="actionNone"
                            android:textColorHint="@color/colorPrimary" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/edit_name_button"
                        android:src="@drawable/ic_edit"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/edit_btn_desc" />
                    <ImageButton
                        android:id="@+id/confirm_name_button"
                        android:visibility="gone"
                        android:src="@drawable/ic_check"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/edit_btn_desc" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:id="@+id/edit_text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_hint"
                            android:text="@string/dummy_email"
                            android:enabled="false"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/colorPrimary" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/edit_email_button"
                        android:src="@drawable/ic_edit"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/edit_btn_desc" />
                    <ImageButton
                        android:id="@+id/confirm_email_button"
                        android:visibility="gone"
                        android:src="@drawable/ic_check"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/edit_btn_desc" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_hint"
                            android:enabled="true"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textColorHint="@color/colorPrimary" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>