<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/man"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_picture_description" />

        <!--  Mood -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/mood_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown" />

        </RelativeLayout>

        <!--  Energy -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="asdfasdfas"/>

            <!--<android.support.v7.widget.AppCompatSeekBar-->
                <!--android:id="@+id/energy_seekbar"-->
                <!--android:max="100"-->
                <!--android:progress="50"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->
            <!--</android.support.v7.widget.AppCompatSeekBar>-->

        </RelativeLayout>

        <!-- Sleep -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/sleep_seekbar"
                android:max="24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            </android.support.v7.widget.AppCompatSeekBar>

        </RelativeLayout>

        <!-- Exercise -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            </android.support.v7.widget.AppCompatCheckBox>

        </RelativeLayout>

        <!-- Took Medicine -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create_account_button_text"/>

        </RelativeLayout>

        <!-- Alcohol -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_alcohol"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account_button_text"/>

        </RelativeLayout>

        <!-- Caffeine -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_caffeine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account_button_text"/>

        </RelativeLayout>

        <!-- Weather -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_weather"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account_button_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16sp"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>